skeplib/tests/fixtures/sema/invalid/export_duplicate_alias.sk
fn add(a: Int, b: Int) -> Int { return a + b; }
fn sub(a: Int, b: Int) -> Int { return a - b; }
export { add as calc, sub as calc };
fn main() -> Int { return 0; }

